--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
+    "element-plus": "^2.10.1",
     "gsap": "^3.13.0",
+    "jszip": "^3.10.1",
+    "pinia": "^3.0.3",
     "stats.js": "^0.17.0",
     "three": "^0.176.0",
     "vue": "^3.5.13"
