--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pinia": "^3.0.3",
     "stats.js": "^0.17.0",
     "three": "^0.176.0",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
